<?xml version="1.0" encoding="utf-8"?>

<!--
 Copyright (c) 2012 Joe Rowley
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 -->

<resources>
    <string name="hello">Hello World, ObservingLogActivity!</string>
    <string name="app_name">Mobile Astronomical Observing Log</string>
    <string name="initial_text">Please select the operation mode for this session</string>
    <string name="night_mode">Night Mode</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="menu_toggle_mode">Toggle Mode</string>
    <string name="menu_toggle_night_mode">Toggle Night Mode</string>
    <string name="menu_toggle_normal_mode">Toggle Normal Mode</string>
    <string name="menu_return_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">Info/About</string>
    <string name="menu_donate">Donate</string>
    <string name="home_catalogs">Installed Catalogs</string>
    <string name="home_target_lists">Target Lists</string>
    <string name="home_add_catalogs">Manage Catalogs</string>
    <string name="home_backup">Backup Log Data</string>
    <string name="home_settings">Settings</string>
    <string name="settings_screen_header">Mobile Astronomical Observing Log - Settings</string>
    <string name="set_backlight_intensity">Backlight Intensity Setting (1–10)</string>
    <string name="set_use_gps">Use Device GPS Setting</string>
    <string name="set_search_mode">Search Mode Setting</string>
    <string name="use_gps_yes">Yes</string>
    <string name="use_gps_no">No</string>
    <string name="search_mode_simple">Filter</string>
    <string name="search_mode_advanced">Text Search</string>
    <string name="num_picker_down_button">–</string>
    <string name="num_picker_up_button">+</string>
    <string name="num_picker_set_button">Set</string>
    <string name="num_picker_cancel_button">Cancel</string>
    <string name="installed_catalogs_label">Installed Catalogs</string>
    <string name="available_catalogs_label">Available Catalogs</string>
    <string name="unchecked_normal_image_alt">Unchecked Normal</string>
    <string name="checked_normal_image_alt">Checked Normal</string>
    <string name="unchecked_night_image_alt">Unchecked Night</string>
    <string name="checked_night_image_alt">Checked Normal</string>
    <string name="install_selected_catalogs">Install Selected Catalogs</string>
    <string name="remove_selected_catalogs">Remove Selected Catalogs</string>
    <string name="no_installed_catalogs">There are no catalogs currently installed. Please press Available Catalogs to install some</string>
    <string name="no_installed_cats_no_prompt">There are no catalogs currently installed.</string>
    <string name="no_available_catalogs">There are no more catalogs currently available.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_items_selected">ATTENTION: Please select an item before proceeding</string>
    <string name="progress_image_alt">Progress Image</string>
    <string name="manage_telescopes_tab">Manage Telescopes</string>
    <string name="manage_eyepieces_tab">Manage Eyepieces</string>
    <string name="no_telescopes_installed">There are no telescopes currently saved.</string>
    <string name="no_eyepieces_installed">There are no eyepieces currently saved.</string>
    <string name="add_telescope">Add Telescope</string>
    <string name="add_eyepiece">Add Eyepiece</string>
    <string name="add_edit_telescope">Add/Edit Telescope</string>
    <string name="add_edit_eyepiece">Add/Edit Eyepiece</string>
    <string name="primary_diameter">Primary Diameter:</string>
    <string name="focal_ratio">Focal Ratio: f/</string>
    <string name="focal_length">Focal Length:</string>
    <string name="type">Type:</string>
    <string name="millimeters">mm</string>
    <string name="inches">in</string>
    <string name="add_location">Add Observing Location</string>
    <string name="no_locations_installed">There are no observing locations currently saved.</string>
    <string name="observing_locations_header">Saved Observing Locations</string>
    <string name="add_edit_location">Add/Edit Observing Location</string>
    <string name="location_title_label">Location Name:</string>
    <string name="location_coordinates_label">GPS Coordinates:</string>
    <string name="location_description_label">Description/Directions:</string>
    <string name="personal_info_top_label">Personal Information</string>
    <string name="personal_info_name_label">Full Name:</string>
    <string name="personal_info_address_label">Address:</string>
    <string name="personal_info_phone_label">Phone:</string>
    <string name="personal_info_email_label">E-mail:</string>
    <string name="personal_info_club_label">Astronomical Club:</string>
    <string name="catalog_icon_alt">Catalog Icon</string>
    <string name="no_installed_catalogs_index_page">There are no catalogs currently installed. Please return home and press \"Manage Catalogs\" to install some</string>
    <string name="no_objects_match_search">There were no objects found in the installed catalogs to match your search criteria. Please reduce your filter criteria or clear the filter.</string>
    <string name="search_string_label">Search Terms (comma-seperated, uses OR logic):</string>
    <string name="search_filters_label">Filters use AND logic and include text search after filters are applied. Use text search, filters or both.</string>
    <string name="search_string_hint">Messier, De Mairan\'s Nebula, Orion</string>
    <string name="search_show_results">Show Results</string>
    <string name="more_image_alt">Show Options</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="refine_filter">Refine Filter</string>
    <string name="clear">Clear</string>
    <string name="save_log">Save Log</string>
    <string name="edit_log">Edit Log</string>
    <string name="clear_log">Reset Info</string>
    <string name="delete_log">Delete Log</string>
    <string name="star_chart_alt">Star Chart</string>
    <string name="common_name_label">Common Name: </string>
    <string name="other_catalogs_label">Other Catalogs: </string>
    <string name="right_ascen_label">RA: </string>
    <string name="dec_label">Dec: </string>
    <string name="mag_label">Magnitude: </string>
    <string name="size_label">Size: </string>
    <string name="type_label">Type: </string>
    <string name="dist_label">Distance: </string>
    <string name="const_label">Constellation: </string>
    <string name="season_label">Season: </string>
    <string name="desc_label">Description: </string>
    <string name="date_label">Date: </string>
    <string name="time_label">Time: </string>
    <string name="location_label">Location: </string>
    <string name="equip_label">Equipment: </string>
    <string name="see_label">Seeing: </string>
    <string name="trans_label">Transparency: </string>
    <string name="fav_label">Favorite</string>
    <string name="add_to_list">Add To Target List</string>
    <string name="view_notes_label">Viewing Notes: </string>
    <string name="n_a">N/A</string>
    <string name="press_to_enter">Press To Enter</string>
    <string name="type_manually">Custom</string>
    <string name="add_target_list">Add Target List</string>
    <string name="no_target_lists_saved">No target lists have been created. Press the button below to create one.</string>
    <string name="add_edit_list_header">Add/Edit Target List</string>
    <string name="list_title_label">Target List Name:</string>
    <string name="list_description_label">Target List Brief Description:</string>
    <string name="save">Save</string>
    <string name="backup_data">Backup All Data</string>
    <string name="restore_data">Restore All Data</string>
    <string name="export_pdf">Export Selected To Print</string>
</resources>