<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:id="@+id/settings_backlight_setter"
   	style="@style/modalContainerNight"
   	>
   
    <TextView  
	    android:id="@+id/number_picker_header"
	    android:text="@string/set_backlight_intensity"
	    style="@style/modalHeaderNight"
	    />
	    
    <Button 
    	android:id="@+id/number_picker_up_button"
    	style="@style/modalUpButtonNight"
    	android:text="@string/num_picker_up_button"
    	android:layout_below="@id/number_picker_header"
    	/>
   
    <TextView  
	    android:id="@+id/number_picker_input_field"
    	style="@style/modalTextFieldNight"
    	android:layout_below="@id/number_picker_up_button"
	    />
	    
    <Button 
    	android:id="@+id/number_picker_down_button"
    	style="@style/modalDownButtonNight"
    	android:text="@string/num_picker_down_button"
    	android:layout_below="@id/number_picker_input_field"
    	/>
    	
   	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   		android:id="@+id/save_cancel_container"
   		android:orientation="horizontal"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
   		android:layout_marginLeft="15dp"
   		android:layout_marginRight="15dp"
   		android:layout_below="@id/number_picker_down_button"
   		android:gravity="center_horizontal"
   		>
	    
	    <Button 
	    	android:id="@+id/number_picker_save_button"
	    	style="@style/modalSaveCancelButtonNight"
	    	android:text="@string/num_picker_set_button"
	    	android:layout_weight="40"
	    	/>
		    
	    <Button 
	    	android:id="@+id/number_picker_cancel_button"
	    	style="@style/modalSaveCancelButtonNight"
	    	android:text="@string/num_picker_cancel_button"
	    	android:layout_weight="40"
	    	/>
   		
	</LinearLayout>
    
</RelativeLayout>