<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black"
    >
    
	<TextView  
	    android:id="@+id/initialHeader"
    	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/app_name"
	    android:textColor="@color/black"
	    android:gravity="center_horizontal"
	    android:background="@color/red"
	    android:padding="2dp"
	    android:textStyle="bold"
	    />
	    
	<Button xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/initialNightButton"
    	android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/night_mode"
		android:background="@drawable/black_button"
		android:textColor="@color/red"
		android:layout_marginLeft="25dp"
		android:layout_marginRight="25dp"
		android:layout_marginTop="45dp"
		android:layout_marginBottom="45dp"
	    android:layout_weight="45"
		/>
		
	<Button xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/initialNormalButton"
    	android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/normal_mode"
		android:background="@drawable/red_button"
		android:textColor="@color/black"
		android:layout_marginLeft="25dp"
		android:layout_marginRight="25dp"
		android:layout_marginTop="45dp"
		android:layout_marginBottom="45dp"
	    android:layout_weight="45"
		/>
		
	<TextView  
	    android:id="@+id/initialFooter"
    	android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/initial_text"
	    android:textColor="@color/red"
	    android:layout_weight="10"
		android:layout_marginBottom="10dp"
	    android:gravity="bottom|center_horizontal"
	    />
	    
</LinearLayout>
