<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/layoutRootNormal"
    android:id="@+id/edit_telescope_root"
    android:orientation="vertical"
    >
    
	<TextView  
	    style="@style/headerBarNormal" 
	    android:id="@+id/homescreenHeader"
	    android:text="@string/app_name"
	    />
	    
    <ListView  
         android:id="@android:id/list"
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         />
    
    <TextView
        style="@style/formScreenHeaderNormal"
        android:text="@string/add_edit_telescope"
        />
    
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="5dp"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        >
    
	    <TextView
	        style="@style/formScreenLabelNormal"
	        android:text="@string/primary_diameter"
	        />
	    
	    <EditText 
	        style="@style/formScreenTextFieldNormal"
	        android:id="@+id/telescope_primary_diameter"
	        android:maxLines="1"
	        android:inputType="number"
	        android:layout_width="75dp" 
	        android:layout_height="wrap_content"
	        />
	    
	    <Button 
	        style="@style/formItemButtonNormal"
	        android:id="@+id/primary_diameter_unit"
	        android:layout_width="40dp" 
	        android:text="mm"	        
	        />
        
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="5dp"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        >
    
	    <TextView
	        style="@style/formScreenLabelNormal"
	        android:text="@string/focal_ratio"
	        />
	    
	    <EditText 
	        style="@style/formScreenTextFieldNormal"
	        android:id="@+id/telescope_focal_ratio"
	        android:maxLines="1"
	        android:inputType="number"
	        android:layout_width="60dp" 
	        android:layout_height="wrap_content"
	        />
        
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="5dp"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        >
    
	    <TextView
	        style="@style/formScreenLabelNormal"
	        android:text="@string/focal_length"
	        />
	    
	    <EditText 
	        style="@style/formScreenTextFieldNormal"
	        android:id="@+id/telescope_focal_length"
	        android:maxLines="1"
	        android:inputType="number"
	        android:layout_width="75dp" 
	        android:layout_height="wrap_content"
	        />
	    
	    <Button 
	        style="@style/formItemButtonNormal"
	        android:id="@+id/focal_length_unit"
	        android:layout_width="40dp" 
	        android:text="mm"	        
	        />
        
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="5dp"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        >
    
	    <TextView
	        style="@style/formScreenLabelNormal"
	        android:text="@string/type"
	        />
	    
	    <EditText 
	        style="@style/formScreenTextFieldNormal"
	        android:id="@+id/telescope_type"
	        android:maxLines="1"
	        android:layout_width="175dp" 
	        android:layout_height="wrap_content"
	        />
        
    </LinearLayout>
    
    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingBottom="14dp"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="bottom"
        >
	    
	    <Button 
	        android:id="@+id/telescope_save"
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
	        android:layout_weight="33"
	        android:layout_marginRight="6dp"
	        android:text="Save"	      
	        />
	    
	    <Button 
	        android:id="@+id/telescope_cancel"
	        android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
	        android:layout_weight="33"
	        android:layout_marginLeft="6dp"
	        android:text="Cancel"	       
	        />
        
    </LinearLayout>
	    
</LinearLayout>