<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:id="@+id/alert_modal"
   	style="@style/modalContainerNight"
   	>
   
    <TextView  
	    android:id="@+id/alert_main_text"
	    style="@style/alertMainTextNight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    />
    
    <LinearLayout 
   		android:id="@+id/save_cancel_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
   		android:layout_marginLeft="15dp"
   		android:layout_marginRight="15dp"
   		android:gravity="center_horizontal"
        android:layout_below="@id/alert_main_text" 
        >
	    
	    <Button 
	    	android:id="@+id/alert_ok_button"
	    	style="@style/modalSaveCancelButtonNight"
	    	android:text="@string/ok"
	    	android:layout_weight="40"
	    	/>
	    
	    <Button 
	    	android:id="@+id/alert_cancel_button"
	    	style="@style/modalSaveCancelButtonNight"
	    	android:text="@string/num_picker_cancel_button"
	    	android:layout_weight="40"
	    	/>
    
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/progress_display"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
   		android:layout_marginLeft="15dp"
   		android:layout_marginRight="15dp"
   		android:gravity="center|center"
   		android:layout_gravity="center|center"
        android:layout_below="@id/save_cancel_container"
        >
	    
        <ImageView
            android:layout_width="50dp"
		    android:layout_height="50dp"
		    android:contentDescription="@string/progress_image_alt"
		    android:layout_marginTop="5dp"
		    android:layout_marginBottom="5dp"
		    android:layout_marginRight="15dp"
		    android:layout_marginLeft="15dp"
		    android:id="@+id/progress_image" />
        
        <TextView 
		    android:id="@+id/progress_text"
		    style="@style/alertMainTextNight"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
		    />
        
    </LinearLayout>
    
</RelativeLayout>